# narrative-tracker

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  run.sh  seed.db
.github/workflows/: deploy.yml
marketing/: deploy_guide.md  gen_slides_v2.py  generate_slides.py  github_guide.md  linkedin_post.md
src/: analyzer.py  app.py  collector.py  generate_slides.py  scheduler.py  schema.sql  scorer.py
src/static/: style.css
src/templates/: index.html
